--- a/app/src/main/res/layout/fragment_entry.xml
+++ b/app/src/main/res/layout/fragment_entry.xml
@@ -15,7 +15,6 @@
             android:id="@+id/userNameView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:content="MyName"
             app:iconDrawable="@drawable/ic_person"
             app:menu="@menu/detail_username"
             app:title="User Name" />
@@ -24,23 +23,22 @@
             android:id="@+id/passwordView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:content="******"
             app:iconDrawable="@drawable/ic_key"
+            app:menu="@menu/detail_password"
             app:title="Password" />
 
         <me.thanel.keepasst.entry.view.EntryDetailView
             android:id="@+id/urlView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:content="https://example.com"
             app:iconDrawable="@drawable/ic_link"
+            app:menu="@menu/detail_url"
             app:title="URL" />
 
         <me.thanel.keepasst.entry.view.EntryDetailView
             android:id="@+id/creationDateView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:content="30/09/2017 12:00"
             app:iconDrawable="@drawable/ic_today"
             app:title="Created" />
 
@@ -48,7 +46,6 @@
             android:id="@+id/modificationDateView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:content="30/09/2017 12:00"
             app:iconDrawable="@drawable/ic_today"
             app:title="Modified" />
 
@@ -56,7 +53,6 @@
             android:id="@+id/notesView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:content="Some text note for this entry"
             app:iconDrawable="@drawable/ic_note"
             app:title="Notes" />
 
