--- a/app/src/main/res/layout/view_entry_detail.xml
+++ b/app/src/main/res/layout/view_entry_detail.xml
@@ -50,15 +50,16 @@
 
     <me.thanel.keepasst.view.PopupMenuIcon
         android:id="@+id/actionIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_more_vert" />
+        app:srcCompat="@drawable/ic_more_vert"
+        app:tint="?android:attr/textColorSecondary" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
