--- a/app/src/main/res/menu/detail_password.xml
+++ b/app/src/main/res/menu/detail_password.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/copy"
+        android:id="@+id/copy_password"
         android:icon="@drawable/ic_copy"
         android:title="@string/copy_to_clipboard"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/show_hide"
+        android:id="@+id/toggle_password_visibility"
         android:icon="@drawable/ic_show"
         android:title="@string/show_password"
         app:showAsAction="ifRoom" />
