--- a/app/src/main/res/menu/detail_url.xml
+++ b/app/src/main/res/menu/detail_url.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/copy"
+        android:id="@+id/copy_url"
         android:icon="@drawable/ic_copy"
         android:title="@string/copy_to_clipboard"
         app:showAsAction="ifRoom" />
