--- a/app/src/main/res/menu/detail_password.xml
+++ b/app/src/main/res/menu/detail_password.xml
@@ -9,9 +9,9 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/toggle_password_visibility"
-        android:icon="@drawable/ic_show"
-        android:title="@string/show_password"
+        android:id="@+id/toggle_visibility"
+        android:icon="@drawable/ic_shown"
+        android:title="@string/show"
         app:showAsAction="ifRoom" />
 
 </menu>
