Display click background only under action icon
For EntryDetailView's.

--- a/app/src/main/res/layout/view_entry_detail.xml
+++ b/app/src/main/res/layout/view_entry_detail.xml
@@ -50,11 +50,13 @@
 
     <me.thanel.keepasst.view.PopupMenuIcon
         android:id="@+id/actionIcon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
+        android:background="?selectableItemBackgroundBorderless"
+        android:padding="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
